Changement sur le tri
Test des méthodes de tri des UE des étudiants, nécessite encore une attention

Modification et ajout de certaines classes